[gd_scene load_steps=8 format=2]

[ext_resource path="res://StickmanCharacter.gd" type="Script" id=1]
[ext_resource path="res://StickmanVisual.tscn" type="PackedScene" id=2]
[ext_resource path="res://HealthComponent.gd" type="Script" id=3]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.718182 ), 0.0, 0.0, 0, 0, Vector2( 0.528517, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 85.0

[sub_resource type="RayShape2D" id=3]
length = 13.0

[node name="StickmanCharacter" type="KinematicBody2D"]
collision_layer = 512
collision_mask = 13
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 59.3956 ],
"_edit_vertical_guides_": [ 16.4345 ]
}
OnWallGravityCurve = SubResource( 1 )

[node name="HealthComp" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CS2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.05946 )
z_index = -2
shape = SubResource( 2 )

[node name="CP2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 45.9405 )
z_index = -2
polygon = PoolVector2Array( -8.8, 0, -2, 8, 0, 10, 2, 8, 8.8, 0 )

[node name="CSSlopeRay" type="CollisionShape2D" parent="."]
position = Vector2( 0, 46.5625 )
z_index = -2
shape = SubResource( 3 )

[node name="WeaponSlot" type="Node2D" parent="."]
position = Vector2( -12.1947, -30.6311 )
rotation = 1.61404
scale = Vector2( 3, 3 )

[node name="Gun" parent="WeaponSlot" instance=ExtResource( 5 )]

[node name="Rays" type="Node2D" parent="."]

[node name="TwoWayPlatformChecker" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 55.4526 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="WeaponWallDetector" type="RayCast2D" parent="Rays"]
position = Vector2( 0.374686, -39.1478 )
enabled = true
exclude_parent = false
cast_to = Vector2( 46, 0 )

[node name="WallDetectors" type="Node2D" parent="Rays"]

[node name="1" type="RayCast2D" parent="Rays/WallDetectors"]
position = Vector2( 0, -33 )
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="2" type="RayCast2D" parent="Rays/WallDetectors"]
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="3" type="RayCast2D" parent="Rays/WallDetectors"]
position = Vector2( 0, 40 )
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="StickmanVisual" parent="." instance=ExtResource( 2 )]
WeaponSlotPath = NodePath("../WeaponSlot")
WeaponWallDetectorPath = NodePath("../Rays/WeaponWallDetector")

[node name="Tween" type="Tween" parent="."]
